--- a/index.html
+++ b/index.html
@@ -9,16 +9,51 @@
     <link rel="stylesheet" href="./images/style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
         <h1>Wellcome to </h1>
-        <h1> <span class="name">Al-meraj</span>  website</h1>
+        <h1> <span class="orange">Al-meraj</span>  website</h1>
         <h3>World class web developer</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta tempora fugiat nam. Doloribus dicta magni perspiciatis dignissimos, nemo illo delectus repudiandae similique unde laboriosam, iusto aliquam culpa pariatur nostrum accusamus. Nostrum, accusantium tempora. Quos illo minus aperiam. Maxime iure doloribus quod ab eligendi at praesentium porro suscipit deserunt nisi. Eligendi?</p>
+        <a class="link-button" target="_blank" href="https://www.facebook.com/almeraj.kalib.7">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="./images/al-meraj.png" alt="">
         </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="../web-portfolio/images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>Become a World Class Web Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia fuga quos, quia aut suscipit ratione reiciendis maiores voluptates neque quibusdam dignissimos unde quidem praesentium dolorem beatae fugit alias non? Tenetur aliquid pariatur, blanditiis repellendus, debitis voluptatem vitae aperiam deserunt saepe voluptate aliquam, laboriosam illo error velit. Natus in et voluptas assumenda alias voluptatem quasi quos odio animi dignissimos illo ipsam fugit, soluta tempore delectus, atque harum, repudiandae quibusdam totam quod!</p>
+            <a class="link-button" target="_blank" href="https://www.instagram.com/almeraj7/">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="f" class="half-width kola">
+            <h2>Full Stack Web Dev</h2>
+            <h3 class="orange">2021 - Present | Pro level Web Dev </h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium nulla accusamus sed optio odit temporibus eaque, est iure sint aut. Esse itaque ab quaerat voluptatem laudantium rem quae sunt eius.
+            </p>
+        </div>
+        <div id="h" class="half-width kola">
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange">2020-2021 | Programming Hero Learner</h3>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae, expedita dolores. Rem quam, expedita, ratione molestias voluptate ipsum reiciendis nobis hic, excepturi possimus repellat magni quos atque eveniet sequi quia?
+            </p>
+
+        </div>
+
+    </section>
+    <footer>
+      <p>Al-meraj 2021, All rights reserved</p> 
+    </footer>
 </body>
 </html>
+
